2009-05-16  kitone  <kitone@gna.org>

	* plugins/actions/preferences/dialog-preferences.glade:
	* plugins/actions/preferences/interfacepage.h:
	* src/defaultcfg.cc:
	* src/subtitleview.cc:
	Fix: bug #2341 : Add option to don't disable the actions during editing.

2009-05-16  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	Fix: 'play/pause' doesn't work after 'play selection'.

2009-05-13  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/patternmanager.cc:
	* plugins/actions/textcorrection/patternmanager.h:
	Maintain order of patterns with the same name.

2009-05-12  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/Latn-fi.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Latn-fr.common-error.se-pattern.in:
	Update with policy value.

2009-05-12  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/confirmationpage.h:
	Select modified subtitles.

2009-05-12  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/Latn-en.capitalization.se-pattern.in:
	* plugins/actions/textcorrection/Latn-en.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Latn-fi.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Latn-fr.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Latn.capitalization.se-pattern.in:
	* plugins/actions/textcorrection/Latn.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Latn.hearing-impaired.se-pattern.in:
	* plugins/actions/textcorrection/Makefile.am:
	* plugins/actions/textcorrection/capitalizationpage.h:
	* plugins/actions/textcorrection/textcorrection.cc:
	Extract capitalization pattern from common-error to
	capitalization.se-pattern. New Latn-fi pattern. Update from Gaupol
	repository.

2009-05-09  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/patternmanager.cc:
	Fixed error in implementation. Poorly sorted patternmanager: get_patterns.

2009-05-07  kitone  <kitone@gna.org>
