@@ -1,3 +1,12 @@
+2009-05-23  kitone  <kitone@gna.org>
+
+	* src/Makefile.am:
+	Add new files spellchecker.h and spellchecker.cc.
+
+	* src/spellchecker.cc:
+	* src/spellchecker.h:
+	Introduce a new class SpellChecker inside the libsubtitleeditor.
+
 2009-05-16  kitone  <kitone@gna.org>
 
 	* plugins/actions/preferences/dialog-preferences.glade:
